IGBF-3650: Bug fix for release-10.0.0: Add java.awt.color to bat and sh scripts, main pom